--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.4
   shared_preferences: ^2.0.15
+  get: ^4.6.3
+  google_fonts: ^2.3.2
 
 dev_dependencies:
   flutter_test:
