--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   shared_preferences: ^2.0.15
   get: ^4.6.3
   google_fonts: ^2.3.2
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
